Fixes and updates

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "@jasonkneen/fluent-mcp",
   "version": "1.0.2",
   "description": "A chainable, fluent interface for building MCP servers with minimal code",
-  "main": "src/fluent-mcp.js",
+  "main": "./dist/fluent-mcp.js",
   "type": "module",
   "scripts": {
-    "build": "tsc && cp src/fluent-mcp.d.ts src/fluent-mcp-client.d.ts dist/",
+    "build": "tsc",
     "start": "node dist/example-server.js",
     "dev": "node dist/example-server.js",
     "demo": "node dist/example-server.js",
@@ -54,5 +54,15 @@
     "url": "https://github.com/jasonkneen/fluent-mcp/issues"
   },
   "homepage": "https://github.com/jasonkneen/fluent-mcp#readme",
-  "packageManager": "pnpm@10.8.1+sha512.c50088ba998c67b8ca8c99df8a5e02fd2ae2e2b29aaf238feaa9e124248d3f48f9fb6db2424949ff901cffbb5e0f0cc1ad6aedb602cd29450751d11c35023677"
+  "packageManager": "pnpm@10.8.1+sha512.c50088ba998c67b8ca8c99df8a5e02fd2ae2e2b29aaf238feaa9e124248d3f48f9fb6db2424949ff901cffbb5e0f0cc1ad6aedb602cd29450751d11c35023677",
+  "types": "./dist/fluent-mcp.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/fluent-mcp.js",
+      "types": "./dist/fluent-mcp.d.ts"
+    }
+  },
+  "files": [
+    "dist"
+  ]
 }
