--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "demo:ts": "ts-node --esm --transpile-only src/example-server.ts",
     "demo:client": "ts-node --esm --transpile-only src/example-client.ts",
     "demo:http-client": "ts-node --esm --transpile-only src/example-http-client.ts",
+    "demo:sse": "node examples/example-sse-server.js",
+    "demo:sse-client": "node examples/example-sse-client.js",
     "lint": "eslint src --ext .ts",
     "test": "vitest run src/fluent-mcp.test.ts src/server.test.ts src/fluent-mcp-client.test.ts",
     "test:watch": "vitest",
@@ -19,9 +21,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.11.1",
-    "socket.io": "^4.7.2",
-    "zod": "^3.22.4"
+    "@modelcontextprotocol/sdk": "^1.20.2",
+    "socket.io": "^4.8.1",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
